--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: dependencies
-      run: sudo apt-get install check imagemagick libtool libmpc-dev libcairo2-dev libgd-dev libimlib2-dev
+      run: sudo apt-get install check imagemagick libtool-bin libmpc-dev libcairo2-dev libgd-dev libimlib2-dev
     - uses: actions/checkout@v2
     - name: make
       run: make SILENT= LIBTOOL_SILENT=
